--- a/generic_IP_UN_checker.ipynb
+++ b/generic_IP_UN_checker.ipynb
@@ -10,7 +10,7 @@
     "This script is used for running IPs through 2 APIs found during a Brute force attack and pulling out the usernames used, then generating an output Excel\n",
     "file with the results.  \n",
     "\n",
-    "Required Modules that may need to be installed: pandas\n",
+    "Required Modules that may need to be installed: pandas, extract_msg\n",
     "Required Files: evidence.txt\n",
     "\n",
     "Requirements:\n",
@@ -44,7 +44,7 @@
     "def gather_evidence():\n",
     "    result = []\n",
     "    \n",
-    "    #Path to .MSG\n",
+    "    #Path to .MSG files\n",
     "    f = glob.glob(r'SecurityLogs\\*.msg')\n",
     "    \n",
     "    for filename in f:\n",
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "'''Variables used for this script'''\n",
-    "#Regex patterns to find IP addresses and Usernames\n",
+    "#Regex patterns to find IP addresses and Usernames NOTE: Does NOT verify valid IP ranges.\n",
     "ipmatch = r'\\b\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\b'\n",
     "#Username pattern needs to be edited to fit the log file's format\n",
     "usermatch = r'(?<=user )(.*)(?= from)'\n",
